# nes-emulator

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  DEVELOPMENT.md  LICENSE  README.md  generate.bat  vcpkg-configuration.json  vcpkg.json
Core/: CMakeLists.txt
Core/include/nes/: Emulator.h
Core/src/: APU.cpp  BaseMapper.h  CPU.cpp  CPU_Instructions.cpp  Cartridge.cpp  Controller.cpp  Debugger.cpp  Debugger.h  Emulator.cpp  PPU.cpp
Core/src/Mappers/: Mapper4.cpp
Core/src/Types/: CPU_Types.cpp  CPU_Types.h  Cartridge_Types.h  PPU_Types.cpp  PPU_Types.h
Core/src/Utility/: FileManager.cpp  FileManager.h  Patch_IPS.cpp  Snapshotable.hpp
Frontends/glfw/: CMakeLists.txt
Frontends/glfw/src/: MainWindow.cpp  MainWindow.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp  main_window.cpp  main_window.h  shader.cpp  shader.h
Frontends/sdl2/: CMakeLists.txt
Frontends/sdl2/src/: MainWindow.cpp  MainWindow.h  main.cpp  main_window.cpp  main_window.h
apps/sdl3/: CMakeLists.txt
apps/sdl3/src/: app.cpp  app.hpp  main.cpp
apps/sdl3/src/sdl/: sdl.hpp  sdl_context.hpp  sdl_error.hpp  sdl_include.hpp  sdl_renderer.hpp  sdl_texture.hpp  sdl_window.hpp
apps/sdl3/src/utils/: files.hpp  scaling.hpp  vec2.hpp
core/common/: CMakeLists.txt
core/common-sys/: CMakeLists.txt
core/common-sys/include/lib/: system_utils.hpp
core/common-sys/src/: system_utils.cpp
core/common/include/: bit_field.hpp  common.h  file_utils.h  system_utils.h
core/common/include/lib/: bitfield.hpp  bitfield_helper.hpp  common.hpp  files.hpp  integer.hpp  sane_integer.hpp  version.hpp.in
core/common/src/: file_utils.cpp  system_utils.cpp
core/common/tests/: CMakeLists.txt
core/common/tests/src/: integer_tests.cpp  sane_integer_tests.cpp
core/lib-common/: CMakeLists.txt
core/lib-common/include/lib/: bit_field.hpp  common.h
core/lib-common/src/: system_utils.cpp
core/nes-core/: CMakeLists.txt
core/nes-core/include/nes/: Emulator.h  constants.hpp  nes.h  nes.hpp
core/nes-core/src/: BaseMapper.cpp  Cartridge.cpp  Cartridge.h  Controller.cpp  Controller.h  Emulator.cpp  base_mapper.cpp  base_mapper.h  base_mapper.hpp  cartridge.cpp  cartridge.h  cartridge.hpp  controller.cpp  controller.h  controller.hpp  cpu.cpp  cpu.h  cpu.hpp  cpu_instructions.cpp  nes.cpp  ppu.cpp  ppu.h  ppu.hpp
core/nes-core/src/Mappers/: Mapper0.cpp  Mapper1.cpp  Mapper1.h  Mapper4.cpp
core/nes-core/src/Utility/: Connection.hpp  FileManager.cpp  FileManager.h  Patch.h  Patch_IPS.cpp  Snapshotable.hpp  file_manager.cpp  ips_patch.cpp  ips_patch.h
core/nes-core/src/mappers/: mapper_0.cpp  mapper_0.h  mapper_0.hpp  mapper_1.cpp  mapper_1.h  mapper_1.hpp  mapper_2.cpp  mapper_2.h  mapper_2.hpp  mapper_4.cpp  mapper_4.h  mapper_4.hpp  mapper_7.cpp  mapper_7.h  mapper_7.hpp
core/nes-core/src/todo/: audio.cpp  audio.hpp  debugger.cpp  debugger.hpp
core/nes-core/src/types/: cpu_types.cpp  cpu_types.h  cpu_types.hpp  ppu_types.cpp  ppu_types.h  ppu_types.hpp
core/nes-core/src/utility/: connection.hpp  file_manager.cpp  file_manager.h  file_manager.hpp  ips_patch.cpp  ips_patch.h  ips_patch.hpp  snapshotable.hpp
core/nes-core/todo/: APU.cpp  APU.h  Debugger.cpp  Debugger.h
lib/: CMakeLists.txt
lib/Nes_Snd_Emu/: CMakeLists.txt
lib/Nes_Snd_Emu/include/: Sound_Queue.h  blargg_common.h
lib/include/: bit_cast.hpp  bit_field.hpp  common.h  log.h  system_utils.h  timer.h
lib/src/: bit_utils.cpp  log.cpp  system_utils.cpp  timer.cpp
libs/: CMakeLists.txt
libs/include/: bit_field.hpp  bit_utils.h  common.h  system_utils.h  timer.h
libs/src/: bit_utils.cpp  system_utils.cpp
nes/: CMakeLists.txt
nes/include/nes/: Emulator.h  apu.h  cartridge.h  cpu.h  debugger.h  emulator.h  ppu.h
nes/include/nes/mappers/: mapper0.h  mapper4.h  mapper7.h
nes/include/nes/types/: cartridge.h
nes/include/nes/utility/: ips_patch.h
nes/libs/: CMakeLists.txt
nes/libs/include/: bit_field.hpp  common.h  system_utils.h
nes/libs/src/: log.cpp  system_utils.cpp  timer.cpp
nes/src/: APU.cpp  APU.h  BaseMapper.cpp  BaseMapper.h  CPU.cpp  CPU.h  CPU_Instructions.cpp  Cartridge.cpp  Cartridge.h  Controller.cpp  Controller.h  Debugger.cpp  Debugger.h  Emulator.cpp  PPU.cpp  PPU.h  apu.cpp  base_mapper.cpp  cartridge.cpp  cpu.cpp  cpu_instructions.cpp  debugger.cpp  emulator.cpp  ppu.cpp
nes/src/Mappers/: Mapper0.cpp  Mapper0.h  Mapper1.cpp  Mapper1.h  Mapper2.cpp  Mapper2.h  Mapper4.cpp  Mapper4.h  Mapper7.cpp  Mapper7.h
nes/src/Types/: CPU_Types.cpp  CPU_Types.h  Cartridge_Types.h
nes/src/Utility/: FileManager.cpp  FileManager.h  Patch.h  Patch_IPS.cpp  Snapshotable.hpp
nes/src/mappers/: mapper1.cpp  mapper2.cpp  mapper7.cpp
nes/src/types/: cpu.cpp
nes/src/utility/: file_manager.cpp  ips_patch.cpp
platform/glfw/: CMakeLists.txt
platform/glfw/src/: MainWindow.cpp  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h
platform/sdl2/: CMakeLists.txt
platform/sdl2/src/: MainWindow.cpp  MainWindow.h  SDLHelper.hpp
platform/sdl3/: CMakeLists.txt
platform/sdl3/src/: MainWindow.cpp  MainWindow.h  app.cpp  app.h  app.hpp  main.cpp
platform/sdl3/src/SDLHelpers/: SDLContext.hpp  SDLError.hpp  SDLHelpers.hpp
platform/sdl3/src/sdl/: sdl.hpp  sdl_context.hpp  sdl_error.hpp  sdl_include.hpp  sdl_renderer.hpp  sdl_texture.hpp  sdl_window.hpp
src/core/: CMakeLists.txt
src/core/include/nes/: Emulator.h
src/core/src/: APU.cpp  APU.h  BaseMapper.cpp  BaseMapper.h  CPU.cpp  CPU.h  CPU_Instructions.cpp  Cartridge.cpp  Cartridge.h  Controller.cpp  Controller.h  Debugger.h  Emulator.cpp  PPU.cpp  PPU.h
src/core/src/Mappers/: Mapper0.cpp  Mapper1.cpp  Mapper1.h  Mapper2.cpp  Mapper2.h  Mapper4.cpp  Mapper4.h  Mapper7.cpp  Mapper7.h
src/core/src/Types/: CPU_Types.cpp  CPU_Types.h  Cartridge_Types.h  PPU_Types.cpp  PPU_Types.h
src/core/todo/: APU.cpp  APU.h  Debugger.cpp  Debugger.h
src/ui/: CMakeLists.txt
src/ui/glfw/: CMakeLists.txt
src/ui/qt5/: CMakeLists.txt
src/ui/sdl2/: CMakeLists.txt
(+120 files in other folders)
